--- a/packages/ui/styles/theme.css
+++ b/packages/ui/styles/theme.css
@@ -228,7 +228,7 @@
   scrollbar-gutter: stable;
 }
 
-.custom-scrollbar::-webkit-scrollbar-track {
+/* .custom-scrollbar::-webkit-scrollbar-track {
   border-radius: 10px;
 }
 
@@ -240,7 +240,7 @@
 
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background: rgb(100 116 139 / 0.5);
-}
+} */
 
 /* Custom Swagger Dark Theme */
 .swagger-dark-theme .swagger-ui {
